# CppTemplateHammerlabs

./: .gitignore  CMakeLists.txt  README.md  compileAndRun.sh  requirements.txt  runCmake.sh
mainfiles/: main.cpp
src/: adder.cpp
